--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
   </p>
 </section>
 
+<section id="players">
+  <h2>個別ページへ</h2>
+  <p style="color:#9ca3af;">測定結果・フィードバック・補強内容を選手別に閲覧できます。</p>
+  <div style="display:flex;flex-wrap:wrap;gap:10px;justify-content:center;margin-top:20px;">
+    <a href="k.html" style="background:#3b82f6;color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">Y. KURODA｜Kick型</a>
+    <a href="t.html" style="background:#ef4444;color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">Y. TATSUMURA｜Torque型</a>
+    <a href="m.html" style="background:#22c55e;color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">Y. MIYAKE｜Multi型</a>
+    <a href="f.html" style="background:#facc15;color:#000;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">R. FUJIWARA｜Flow型</a>
+  </div>
+</section>
+
 <!-- ==================== A：屋外 ==================== -->
 <div id="a" class="modal"><div class="modal-content">
 <span class="close" onclick="closeModal('a')">&times;</span>
@@ -251,17 +262,93 @@
 <p><strong>誤り例：</strong> 肩で回す・骨盤が回る・呼吸を止める。</p>
 </div></div>
 
-<!-- -------- 呼吸連動サーキット -------- -->
+<!-- ===== 呼吸連動サーキット（Breathing Coordination Circuit） ===== -->
 <div id="e-breath" class="modal"><div class="modal-content">
 <span class="close" onclick="closeModal('e-breath')">&times;</span>
-<h3>e-1｜呼吸連動サーキット</h3>
-<p><strong>目的：</strong> 呼吸で姿勢・出力を導く感覚を再教育する。</p>
+<h3>e-1｜呼吸連動サーキット（Breathing Coordination Circuit）</h3>
+<p><strong>目的：</strong> 呼吸を動きの起点に置き、吸気で姿勢を立て、呼気で出力を安定させる。</p>
+
+<p><strong>構成：</strong><br>
+① ブリージング・クロール（仰向け） <button onclick="openModal('e-breath1')">解説</button><br>
+② クワドラペッド・ブレス（四つ這い） <button onclick="openModal('e-breath2')">解説</button><br>
+③ リブアイソレーション・ローテーション（胸郭分離） <button onclick="openModal('e-breath3')">解説</button><br>
+④ スタンディング・ブリージング・リーチ <button onclick="openModal('e-breath4')">解説</button><br>
+⑤ クロスアーム・ディープブレス（座位） <button onclick="openModal('e-breath5')">解説</button></p>
+
+<p><strong>強度：</strong> 各種目30秒×3set（サーキット約6分×3set＝約20分）</p>
+<p><strong>休息：</strong> 種目間15秒／セット間60〜90秒／RPE6〜7</p>
+<p><strong>誤り例：</strong> 胸だけで吸う・腹圧が抜ける・呼吸停止・姿勢崩壊。</p>
+</div></div>
+
+<!-- ===== 各種目詳細 ===== -->
+
+<!-- ① ブリージング・クロール -->
+<div id="e-breath1" class="modal"><div class="modal-content">
+<span class="close" onclick="closeModal('e-breath1')">&times;</span>
+<h3>① ブリージング・クロール（仰向け）</h3>
+<p><strong>目的：</strong> 呼吸と四肢の交互連動を作り、肋骨と骨盤の協調性を整える。</p>
 <p><strong>方法：</strong><br>
-1. 仰向けまたは四つ這いで「吸って伸びる」「吐いて沈む」を繰り返す。<br>
-2. 吐気に合わせて体幹を安定させ、吸気で骨盤をリリース。<br>
-3. 呼吸による内圧変化で動作をコントロールする。</p>
-<p><strong>強度：</strong> 各姿勢30秒×3set／RPE6。</p>
-<p><strong>誤り例：</strong> 胸で呼吸・腹を膨らませすぎる・首に力が入る。</p>
+1. 仰向けで片膝を90°に立て、反対側の腕を頭上へ。<br>
+2. 吸気で腕と脚を入れ替え、吐気で戻す。<br>
+3. 腰を浮かさず、呼吸のリズムで体幹を安定させる。</p>
+<p><strong>ポイント：</strong> 肋骨と骨盤が「ねじり合う」感覚を意識。</p>
+<p><strong>誤り例：</strong> 腹圧が抜ける・腕でリード・腰反り。</p>
+</div></div>
+
+<!-- ② クワドラペッド・ブレス -->
+<div id="e-breath2" class="modal"><div class="modal-content">
+<span class="close" onclick="closeModal('e-breath2')">&times;</span>
+<h3>② クワドラペッド・ブレス（四つ這い）</h3>
+<p><strong>目的：</strong> 重力下での呼吸制御と体幹安定性の強化。</p>
+<p><strong>方法：</strong><br>
+1. 四つ這い姿勢をとり、背骨を長く保つ。<br>
+2. 吸気で胸郭を広げ、吐気で腹圧を感じながら背中を安定させる。<br>
+3. 呼吸のたびに“背中で呼吸する”イメージを持つ。</p>
+<p><strong>ポイント：</strong> 呼気で肋骨が閉じる感覚をつかむ。</p>
+<p><strong>誤り例：</strong> 肩で吸う・背中が沈む・顎が上がる。</p>
+</div></div>
+
+<!-- ③ リブアイソレーション・ローテーション -->
+<div id="e-breath3" class="modal"><div class="modal-content">
+<span class="close" onclick="closeModal('e-breath3')">&times;</span>
+<h3>③ リブアイソレーション・ローテーション（胸郭分離）</h3>
+<p><strong>目的：</strong> 下肢・骨盤・肩甲帯を固定した状態で、肋骨のみを回旋させる。</p>
+<p><strong>方法：</strong><br>
+1. 立位または椅子座位で、下肢と骨盤を完全に固定。<br>
+2. 肩甲帯と腕を正面に維持し、動かさない。<br>
+3. 吐気に合わせて肋骨を右（左）方向へわずかに回旋。<br>
+4. 吸気で中央に戻す。<br>
+5. 背骨の軸上で、肋骨だけが滑るように動く感覚を意識。</p>
+<p><strong>ポイント：</strong> 「肋骨がねじれる」のではなく、「肋骨が回る」。<br>
+下半身と肩甲帯の完全固定が前提。</p>
+<p><strong>強度：</strong> 各方向10回×2set／RPE5〜6。</p>
+<p><strong>誤り例：</strong> 肩を回す・骨盤が動く・胸で呼吸する。</p>
+</div></div>
+
+<!-- ④ スタンディング・ブリージング・リーチ -->
+<div id="e-breath4" class="modal"><div class="modal-content">
+<span class="close" onclick="closeModal('e-breath4')">&times;</span>
+<h3>④ スタンディング・ブリージング・リーチ</h3>
+<p><strong>目的：</strong> 立位での呼吸制御と姿勢連動を強化する。</p>
+<p><strong>方法：</strong><br>
+1. 立位で片腕を頭上に伸ばす。<br>
+2. 吸気で肋骨を開きながら上方へ伸びる。<br>
+3. 吐気で骨盤を安定させつつ、反対側に軽く体を傾ける。</p>
+<p><strong>ポイント：</strong> 伸びながら呼吸する＝呼吸が動きを導く。</p>
+<p><strong>誤り例：</strong> 腕で引っ張る・呼吸が浅い・肩を上げる。</p>
+</div></div>
+
+<!-- ⑤ クロスアーム・ディープブレス -->
+<div id="e-breath5" class="modal"><div class="modal-content">
+<span class="close" onclick="closeModal('e-breath5')">&times;</span>
+<h3>⑤ クロスアーム・ディープブレス（座位）</h3>
+<p><strong>目的：</strong> 座位で姿勢と呼吸の中立を取り戻し、胸郭の可動を整える。</p>
+<p><strong>方法：</strong><br>
+1. 背筋を伸ばして座り、両腕を胸の前で交差。<br>
+2. 吸気で肋骨を開き、吐気で腕を軽く押し込みながら前に沈む。<br>
+3. 背中側に呼吸を通す意識で繰り返す。</p>
+<p><strong>ポイント：</strong> 肩ではなく“背中で呼吸する”感覚を優先。</p>
+<p><strong>誤り例：</strong> 背中が丸まる・首が力む・呼吸が止まる。</p>
 </div></div>
 
 <!-- -------- 出力反応サーキット -------- -->
@@ -269,12 +356,32 @@
 <span class="close" onclick="closeModal('e-power')">&times;</span>
 <h3>e-2｜出力反応サーキット</h3>
 <p><strong>目的：</strong> 呼吸と出力を瞬時に切り替える能力を高める。</p>
-<p><strong>方法：</strong><br>
-1. ジャンプ、スクワット、スプリントリズムなどを3種目連続で実施。<br>
-2. 吐気で出力、吸気で回復を繰り返す。<br>
-3. 各種目の切り替えでリズムを崩さず「動作を止めない」こと。</p>
+<p><strong>方法概要：</strong> ジャンプ、スクワット、スプリントリズムなどを3種目連続で実施。  
+<button onclick="openModal('e-power-detail')">詳細解説を見る</button></p>
 <p><strong>強度：</strong> 各種目20秒×3set／RPE8／HR160前後。</p>
 <p><strong>誤り例：</strong> 反動で跳ねる・呼吸を止める・テンポが乱れる。</p>
+</div></div>
+
+<!-- ===== e-2 出力反応サーキット 詳細 ===== -->
+<div id="e-power-detail" class="modal"><div class="modal-content">
+<span class="close" onclick="closeModal('e-power-detail')">&times;</span>
+<h3>e-2｜出力反応サーキットの詳細方法</h3>
+<p><strong>目的：</strong> 呼吸で出力をコントロールし、瞬時の切り替えと動作リズムを教育する。</p>
+
+<p><strong>構成：</strong><br>
+① スクワット・リズム（20秒）<br>
+② ジャンプ・テンポ（20秒）<br>
+③ スプリント・リズム（20秒）<br>
+この3種目を連続で行い、1setを1分とする。合計3set（セット間休息60〜90秒）。</p>
+
+<p><strong>方法：</strong><br>
+1. <em>スクワット・リズム：</em> 吐気で押し上げ、吸気で降下。テンポは「吐く＝出力、吸う＝姿勢」。<br>
+2. <em>ジャンプ・テンポ：</em> 膝と股関節を同時に使い、反動を最小限に。着地時は吸気で姿勢を立て直す。<br>
+3. <em>スプリント・リズム：</em> 3〜5歩の短距離反応で、吐気で加速・吸気で姿勢を再セット。骨盤主導を意識。<br><br>
+各種目を「止まらずにリズムで繋ぐ」ことが最大の狙い。</p>
+
+<p><strong>強度：</strong> 各種目20秒×3種目×3set（計約9分）／RPE8／HR160前後。</p>
+<p><strong>誤り例：</strong> 反動で跳ねる・呼吸を止める・テンポが乱れる・フォームが硬直する。</p>
 </div></div>
 
 <!-- -------- 肋骨回旋サーキット -------- -->
@@ -360,6 +467,8 @@
 <p><strong>強度：</strong> 各方向8回×2set／RPE6。</p>
 <p><strong>誤り例：</strong> 肩で引く・腰を反る・呼吸が浅い。</p>
 </div></div>
+
+
 
 <!-- ==================== フッター・スクリプト ==================== -->
 <footer>
