--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>投手トレーニング2025オフシーズン｜adjustment-lab</title>
+<title>FKK投手トレーニング2025オフシーズン</title>
 <style>
   body{background:#0d1117;color:#e5e7eb;font-family:'Noto Sans JP',sans-serif;margin:0;padding:40px 20px 80px;line-height:1.8;}
   header{text-align:center;border-bottom:1px solid #1f2937;margin-bottom:30px;padding-bottom:15px;}
@@ -40,7 +40,7 @@
 <body>
 
 <header>
-  <h1>投手トレーニング2025オフシーズン｜adjustment-lab</h1>
+  <h1>FKK投手トレーニング2025オフシーズン</h1>
   <p>Equal Load System ― 環境に応じて同等負荷を得る「呼吸 × 出力 × 流れ」</p>
 </header>
 
