--- a/k.html
+++ b/k.html
@@ -88,16 +88,24 @@
 
 <section id="feedback">
   <h2>フィードバック</h2>
-  <h3>良い特徴</h3>
-  <p>・動作の方向性が安定しており、力を真っ直ぐ前へ伝えられる要素を持っている。<br>
-     ・出力フォームが乱れにくく、スプリント中も軸がぶれない。<br>
-     ・重心の通り道が明確で、上半身の力みに左右されにくい。</p>
-
-  <h3>課題</h3>
-  <p>力を出す瞬間に息を止めてしまい、身体の動きが内側で詰まっている。<br>
-     本来は「吸いながら骨盤を前に滑らせる→吐きながら押し出す」流れで、力が全身を通る。<br>
-     今は呼吸が止まることで胸と骨盤の動きが切れ、力が脚で止まっている。<br>
-     呼吸を“動きのリズム”として使えるようになることが最優先。</p>
+<h3>良い特徴</h3>
+<p>
+・社会人野球の投手として“光る素材”を持つ。出力ポテンシャルは高く、身体感覚も鋭い。<br>
+・ただし、良さが長続きしない。力の通し方が雑で、丁寧さと呼吸のタイミングが噛み合っていない。<br>
+・腕の振りに頼りすぎて、骨盤からのエネルギー伝達が寸断されている。<br>
+・それでも、ボール自体には“強さ”がある。球質は悪くなく、制御が整えば上位レベルに通用する。<br>
+・いまは“瞬発で押す投手”。ここから“流れで通す投手”に変われるかが分岐点。<br>
+・雑な出力を整え、呼吸を軸にリズムを作れれば、先発を狙える可能性あり。</p>
+  
+ <h3>課題</h3>
+<p>
+・力を出す瞬間に息を止める癖が強く、全身の連動が途切れている。<br>
+・「力む＝出す」と誤解しており、結果としてリリース時に余白がない。<br>
+・骨盤で始動できていないため、腕の出力が単発で終わり、リズムが続かない。<br>
+・球速もキレも悪くはないが、“呼吸と骨盤のタイミング”が噛み合わず、同じ球を再現できない。<br>
+・まず必要なのは「抜く勇気」。呼吸で動作を整え、力を“通す”感覚を取り戻すこと。<br>
+・力ではなく流れで投げる。その切り替えができれば、制球も球質も一気に安定する。
+</p>
   
   <h3>心拍傾向</h3>
     <p>ペース走中の平均HRは<strong>160bpm前後</strong>で、目標（150前後）よりやや高め。<br>
