--- a/m.html
+++ b/m.html
@@ -36,27 +36,35 @@
 
 <section id="feedback">
   <h2>フィードバック</h2>
-  <h3>良い特徴</h3>
-  <p>・全体のバランスが良く、どの要素も安定して高水準。<br>
-     ・呼吸と動作のテンポが揃っており、リズムに無駄がない。<br>
-     ・疲労下でもフォームが崩れにくく、力の流れが途切れない。</p>
+ <h3>良い特徴</h3>
+<p>
+・体格と筋出力に優れ、球速150kmに到達できる物理的条件を持っている。<br>
+・金獅子大会の投球は下肢から骨盤への力伝達が滑らかで、リリース直前の加速感は高い。<br>
+・フォーム全体の推進ベクトルが前方向に整い始めており、ボールに差し込む力がある。<br>
+・強度の高いトレーニングにも耐え、身体的ポテンシャルは社会人レベルでも上位。<br>
+・一度感覚を掴むと再現性の高さ、フォーム修正能力も持っているはず。
+</p>
 
-  <h3>課題</h3>
-  <p>動きの“切り替え”が少し遅い。筋力はあるが、スイッチが一拍遅れて入る。<br>
-     意識すべきは「強く出す」より「早く通す」。<br>
-     反応を速く、力を短く鋭く出す感覚を育てたい。<br>
-     その一瞬が速くなれば、全ての数値がもう一段上に跳ねる。</p>
+<h3>課題</h3>
+<p>
+出力と制御のリズムが合っておらず、タイミングのズレが球威低下につながっている。<br>
+力の使い方が「押し込み型」に偏り、骨盤と胸郭の動きが同期しない。<br>
+呼吸が止まりやすく、上半身で力を作る場面が多い。<br>
+動作中に“抜く”感覚を身につけることで、滑走的な球速向上が見込める。<br>
+またこだわりが強く感覚の修正に鈍感傾向がある。<br>
+自分の感覚を信じつつも、身体の仕組みに従う冷静さを持つべき時期に来ている。<br>
+客観的データをもとに「再現性」を数値で捉えることが必要。
+</p>
 
   <h3>心拍傾向</h3>
-  <p>平均HR<strong>145bpm</strong>、1分後ΔHR<strong>35bpm</strong>。<br>
-     → 回復能は非常に高い。高出力トレーニング時に呼吸テンポを乱さない強みを活かし、出力系刺激（RPE8〜9）を週1で導入可能。</p>
-</section>
+  <p>
+  ペース走平均HRは<strong>158〜162bpm</strong>。<br>
+  呼吸リズムが浅く、出力優先でテンポが乱れやすい。<br>
+  HR回復Δ（1分後の低下幅）が<strong>22bpm前後</strong>に留まり、持久局面では疲労残存が見られる。<br>
+  → 呼吸テンポ（吸2拍→吐2拍）を徹底的に習慣化し、試合中でも酸素を切らさない“循環型出力”を育てたい。
+  </p>
 
-  <div class="note">
-    <strong>コーチコメント：</strong><br>
-    力はもう十分ある。足りないのは“切り替えの速さ”。<br>
-    反応を制す者が流れを制す。迷わずスイッチがが入る。
-  </div>
+
 </section>
 
 <section id="menu">
