--- a/t.html
+++ b/t.html
@@ -43,27 +43,27 @@
 
 <section id="feedback">
   <h2>フィードバック</h2>
+<section id="feedback">
+  <h2>フィードバック</h2>
   <h3>良い特徴</h3>
-  <p>・基礎的な安定感があり、体がブレにくい。<br>
-     ・脚主導の動作で、力の方向をコントロールできる。<br>
-     ・呼吸が浅くなっても粘れるタイプで、試合後半にも強い。</p>
+  <p>・体の感じ方に繊細さがあり、動きの“質”を感じ取れる感性がある。<br>
+     ・リズムとテンポの取り方がうまく、形で覚えるのではなく感覚で掴むタイプ。<br>
+     ・ボールの回転や軌道に対する感受性が高く、復帰後の精度型投手としての伸びしろは十分。</p>
 
   <h3>課題</h3>
-  <p>骨盤が回る前に胸が先に開いてしまい、ひねりが“逃げている”。<br>
-     その結果、力が体の中心で生まれず、上半身で投げてしまう形になる。<br>
-     体をひねるのではなく、<strong>「骨盤を先に送り、胸を遅らせる」</strong>感覚を作りたい。<br>
-     骨盤のリードが出た瞬間に、力の通り道が一気に開く。</p>
+  <p>「壊したくない」という意識が強すぎて、体の動きを自分で止めている。<br>
+     それが痛みの再発を防いでいるように見えて、実際は“出力を奪っている”。<br>
+     恐怖ではなく、制御で守る段階に入っている。<br>
+     今は安全領域の中で<strong>“骨盤を動かし、胸を遅らせる”</strong>時間を取り戻すこと。<br>
+     回旋が戻れば、腕の振りは自然に戻る。<br><br>
+     自分流で感覚を探すのではなく、信頼できる手を借りながら“正しく冒険”していくこと。<br>
+     今の慎重さは悪くない、ただそのままでは150kmのポテンシャルは消える。</p>
 
   <h3>心拍傾向</h3>
- <p>平均HR<strong>155bpm</strong>、1分後ΔHR<strong>18bpm</strong>。<br>
-     → 有酸素回復力は中程度。呼吸を整える時間をもう少し確保することでスプリントの再現性が高まる。<br>
-     吸気で立ち上がり、吐気でねじれを戻す呼吸リズムを練習中にも意識。</p> 
-
-  <div class="note">
-    <strong>コーチコメント：</strong><br>
-    腰が先、胸はあと――この順番を掴めば出力は倍になる。<br>
-    回さず、ずらせ。ズレがトルクを生む。
-  </div>
+  <p>平均HR<strong>150bpm</strong>、1分後ΔHR<strong>22bpm</strong>。<br>
+     → 回復力は可もなく不可もなく。運動中の呼吸は浅く、胸式に偏っている傾向。<br>
+     胸郭の可動が制限されていると、回旋動作にも制約が出る。<br>
+     吸気で肋骨を開き、吐気で骨盤を前に送るテンポを意識すると、トルクが戻り始める。</p>
 </section>
 
 <section id="menu">
