--- a/k.html
+++ b/k.html
@@ -107,10 +107,16 @@
 ・力ではなく流れで投げる。その切り替えができれば、制球も球質も一気に安定する。
 </p>
   
-  <h3>心拍傾向</h3>
-    <p>ペース走中の平均HRは<strong>160bpm前後</strong>で、目標（150前後）よりやや高め。<br>
-     → 出力主導で呼吸が浅くなっている。前半は吸気で姿勢を立て、吐気で押し出すテンポを意識。<br>
-     回復1分後のΔHR（低下幅）は<strong>25bpm</strong>が理想。20以下なら疲労蓄積を疑う。</p>
+<h3>心拍傾向</h3>
+<p>
+ペース走中の平均HRは<strong>160bpm前後</strong>。<br>目標（150前後）より常に高く、<strong>無駄に力を使っている</strong>状態。<br>
+息が通らず出力で押し切ろうとする分、体は早い段階で酸欠気味になる。<br>
+心拍が高いことを「頑張っている」と勘違いしてはいけない。<br>これは“呼吸の乱れ”のサインだ。<br>
+<em>力を抜いても同じ速度を維持できる</em>ようになれば、それが本当の強さ。<br><br>
+跳ね上がった心拍が下がらないのは、体が“抜けない”まま走り続けている証拠。<br>
+まずは呼吸テンポ（吸2拍→吐2拍）で心拍を支配できるか。<br>
+“息を通して動く”という基本ができなければ、どれだけ走っても数字は変わらない。
+</p>
 
 </section>
 
