--- a/f.html
+++ b/f.html
@@ -36,27 +36,41 @@
 
 <section id="feedback">
   <h2>フィードバック</h2>
+ <section id="feedback">
+  <h2>フィードバック</h2>
+
   <h3>良い特徴</h3>
-  <p>・出力のポテンシャルが高く、力を前に押し出す感覚が鋭い。<br>
-     ・体幹が強く、姿勢保持能力に優れている。<br>
-     ・負荷を恐れず攻めるタイプで、成長速度が速い。</p>
+  <p>
+  ・出力の瞬発性と反応スピードが高く体を“動かす”ことに関しての感覚は非常に鋭い。<br>
+  ・骨盤の滑り出しや脚の切り返しが自然で、リズムセンスに恵まれている。<br>
+  ・一度スイッチが入ると、誰よりも集中して爆発できるタイプ。<br>
+  ・ただし、出力が波のように大きい分、制御を失うと一気に乱れる。<br>
+  ・勢いだけで勝負できる段階は過ぎた。<br>
+  ・“波を起こす”だけでなく、“波を操る”ことを覚えるべき段階に来ている。
+  </p>
 
   <h3>課題</h3>
-  <p>力を出す方向がまだ粗い。出力が点で終わり、動きが“流れ”になっていない。<br>
-     力を出したあとも動きを止めず、<strong>「力の尾を引く」</strong>意識を持つこと。<br>
-     強く出すよりも、途切れず繋がる方が速くて滑らかだ。<br>
-     身体全体がひとつの波として動くように、流れを感じながら加速せよ。</p>
+  <p>
+  ・動きの“切り替え”が感覚任せで、再現性が低い。<br>
+  ・呼吸が浅く、パワーの波が途切れるため、1球ごとに質のムラが大きい。<br>
+  ・「速く動く」意識が強すぎて、力が前で途切れている。<br>
+  ・力を“出す”よりも“通す”。それができなければ、今後どれだけ筋力がついても限界がくる。<br>
+  ・まずは呼吸でリズムを刻み、動きを滑らかに繋げる感覚を身につけたい。<br>  
+  ・強さではなく流れ——それが今最も求められる要素だ。
+  </p>
 
-   <h3>心拍傾向</h3>
- <p> 平均HR<strong>165bpm</strong>、1分後ΔHR<strong>15bpm</strong>。<br>
-     → 出力時の過呼吸傾向。呼吸で“動きを導く”よりも、“止めない”意識を優先。<br>
-     まずは呼吸連動サーキットを基盤に、心拍反応の安定化を優先。</p>
+  <h3>心拍傾向</h3>
+  <p>
+  平均HR<strong>165bpm</strong>、1分後ΔHR<strong>15bpm</strong>。  
+  → 出力時に心拍が暴走し、回復時に落ちきらない“燃えすぎるタイプ”。<br>
+  動きも呼吸も感情も全て“前のめり”で、制御が追いついていない。<br>
+  高心拍を「追い込み」と思っているうちは、持久も反応も伸びない。<br>
+  呼吸テンポで心拍を“引き戻す”トレーニングが必要。<br>
+  熱量を抑えるのではなく、熱を流す。<br>心拍をコントロールできるようになった瞬間、  
+  動きは劇的に安定する。
+  </p>
 
-  <div class="note">
-    <strong>コーチコメント：</strong><br>
-    出力はすでに一級。足りないのは“繋げる意識”。<br>
-    力を放つのではなく、流れに乗せて出す。波のように。
-  </div>
+ 
 </section>
 
 <section id="menu">
