--- a/m.html
+++ b/m.html
@@ -57,12 +57,17 @@
 </p>
 
   <h3>心拍傾向</h3>
-  <p>
-  ペース走平均HRは<strong>158〜162bpm</strong>。<br>
-  呼吸リズムが浅く、出力優先でテンポが乱れやすい。<br>
-  HR回復Δ（1分後の低下幅）が<strong>22bpm前後</strong>に留まり、持久局面では疲労残存が見られる。<br>
-  → 呼吸テンポ（吸2拍→吐2拍）を徹底的に習慣化し、試合中でも酸素を切らさない“循環型出力”を育てたい。
-  </p>
+<p>
+平均HR<strong>158〜162bpm</strong>。<br>
+数字だけ見れば悪くはない。<br>
+ただし身体能力を考えれば“普通”で終わっている。<br>
+出力の強さに対して循環リズムが追いつかず、力を出すほど呼吸が乱れる“非効率型”。<br>
+いわば、高回転エンジンなのに冷却装置が追いついていない状態。<br>
+結果としてテンポのムラが生まれ、良い球の再現率が低下する。<br>
+今必要なのは追い込みながらも“呼吸で出力を整える技術”。<br>
+吸って姿勢を立て、吐いて通す。<br>
+この呼吸テンポを練習でも徹底→勝てる投手へ。
+</p>
 
 
 </section>
