--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ if ('serviceWorker' in navigator) {
       <td>c</td>
       <td>電動式トレッドミル</td>
       <td>呼吸テンポと出力維持</td>
-      <td>テンポ走・変速走・ブリージングウォーク <button onclick="openModal('c')">詳細</button></td>
+      <td>テンポ走・変速走・ブリージングウォーク <button onclick="openModal('c-modal')">詳細</button></td>
     </tr>
     <tr>
       <td>d</td>
@@ -217,8 +217,8 @@ if ('serviceWorker' in navigator) {
 </div></div>
 
 <!-- ==================== C：電動トレッドミル ==================== -->
-<div id="c" class="modal"><div class="modal-content">
-<span class="close" onclick="closeModal('c')">&times;</span>
+<div id="c-modal" class="modal"><div class="modal-content">
+<span class="close" onclick="closeModal('c-modal')">&times;</span>
 <h3>c｜電動式トレッドミル</h3>
 <p><strong>目的：</strong> 一定リズムでの呼吸テンポを作り、フォームの再現性を高める。</p>
 <p><strong>メニュー構成：</strong><br>
