--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ if ('serviceWorker' in navigator) {
       <td>b</td>
       <td>屋内（20m前後）</td>
       <td>短距離反応と姿勢制御</td>
-      <td>反応スプリント・MBスロー・フォームドリル <button onclick="openModal('b')">詳細</button></td>
+      <td>反応スプリント・MBスロー・スプリットポジションプレス <button onclick="openModal('b')">詳細</button></td>
     </tr>
     <tr>
       <td>c</td>
@@ -111,10 +111,10 @@ if ('serviceWorker' in navigator) {
   <h2>個別ページへ</h2>
   <p style="color:#9ca3af;">測定結果・フィードバック・補強内容を選手別に閲覧できます。</p>
   <div style="display:flex;flex-wrap:wrap;gap:10px;justify-content:center;margin-top:20px;">
-    <a href="k.html" style="background:#3b82f6;color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">Y. KURODA｜Kick型</a>
-    <a href="t.html" style="background:#ef4444;color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">Y. TATSUMURA｜Torque型</a>
-    <a href="m.html" style="background:#22c55e;color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">Y. MIYAKE｜Multi型</a>
-    <a href="f.html" style="background:#facc15;color:#000;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">R. FUJIWARA｜Flow型</a>
+    <a href="k.html" style="background:#3b82f6;color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">Y. KURODA</a>
+    <a href="t.html" style="background:#ef4444;color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">Y. TATSUMURA</a>
+    <a href="m.html" style="background:#22c55e;color:#fff;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">Y. MIYAKE</a>
+    <a href="f.html" style="background:#facc15;color:#000;padding:10px 18px;border-radius:8px;text-decoration:none;font-weight:bold;">R. FUJIWARA</a>
   </div>
 </section>
 
@@ -172,7 +172,7 @@ if ('serviceWorker' in navigator) {
 <p><strong>メニュー構成：</strong><br>
 ・反応スプリント <button onclick="openModal('b-react')">解説</button><br>
 ・メディシンボールスロー（MBスロー） <button onclick="openModal('b-mb')">解説</button><br>
-・フォームドリル <button onclick="openModal('b-form')">解説</button></p>
+・スプリットポジションプレス <button onclick="openModal('b-form')">解説</button></p>
 <p><strong>推奨強度：</strong> RPE7〜8／HR155前後／60分程度。</p>
 <p><strong>誤り例：</strong> 初動で力む・姿勢が起きる・骨盤が遅れる。</p>
 </div></div>
@@ -203,17 +203,18 @@ if ('serviceWorker' in navigator) {
 <p><strong>誤り例：</strong> 腕で投げる・呼吸を止める・骨盤が動かない。</p>
 </div></div>
 
-<!-- -------- フォームドリル -------- -->
+<!-- -------- スプリント・ポジションブレス -------- -->
 <div id="b-form" class="modal"><div class="modal-content">
 <span class="close" onclick="closeModal('b-form')">&times;</span>
-<h3>b-3｜フォームドリル</h3>
-<p><strong>目的：</strong> 骨盤リードと姿勢制御を中心に、ランニング時の動作連動を再教育する。</p>
+<h3>b-3｜スプリント・ポジションブレス</h3>
+<p><strong>目的：</strong> スプリント姿勢における骨盤前傾と呼吸の連動を教育する。</p>
 <p><strong>方法：</strong><br>
-1. 20mの区間でスキップ・ニーレイズ・トゥタップなどを組み合わせる。<br>
-2. 呼吸を「吸って立つ→吐いて押す」で統一。<br>
-3. 接地音が静かであれば動作の連動が良好。</p>
-<p><strong>強度：</strong> 各種目2往復×3種目（計6本）／RPE6〜7。</p>
-<p><strong>誤り例：</strong> ストライドを広げる・腰を反る・肩に力が入る。</p>
+1. 壁に手をついて前傾姿勢をとる（脚は前後に開き、膝は軽く曲げる）。<br>
+2. 吸気で骨盤を前に“立て”、吐気で地面を押すように圧を加える。<br>
+3. 呼吸のたびに、骨盤→肋骨→頭の順で姿勢を積み上げる感覚をつくる。<br>
+4. 吸うと姿勢が整い、吐くと出力ポジションが安定するリズムを体得する。</p>
+<p><strong>強度：</strong> 各脚30秒×3set／RPE6〜7。</p>
+<p><strong>誤り例：</strong> 腰を反る・肩で押す・呼吸が止まる。</p>
 </div></div>
 
 <!-- ==================== C：電動トレッドミル ==================== -->
