--- a/f.html
+++ b/f.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>R.FUJIWARA｜Flow型｜adjustment-lab</title>
+<title>R.FUJIWARA</title>
 <style>
   body{background:#0d1117;color:#e5e7eb;font-family:'Noto Sans JP',sans-serif;margin:0;padding:40px 20px 80px;line-height:1.8;}
   header{text-align:center;border-bottom:1px solid #1f2937;margin-bottom:30px;padding-bottom:15px;}
@@ -22,8 +22,7 @@
 <body>
 
 <header>
-  <h1>R. FUJIWARA｜Flow型</h1>
-  <p>若手・滑走制御タイプ</p>
+  <h1>R. FUJIWARA</h1>
 </header>
 
 <section id="data">
