--- a/f.html
+++ b/f.html
@@ -116,5 +116,9 @@
   <a href="index.html">← チーム共通ページへ戻る</a>
 </div>
 
+<footer>
+  <p>© 2025 adjustment-lab | Design & Concept by H. Nishimoto</p>
+</footer>
+
 </body>
 </html>
