--- a/k.html
+++ b/k.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Y.KURODA｜Kick型｜adjustment-lab</title>
+<title>Y.KURODA</title>
 <style>
   body {
     background: #0d1117
@@ -74,8 +74,7 @@
 <body>
 
 <header>
-  <h1>Y. KURODA｜Kick型</h1>
-  <p>出力不足 × 持久弱化タイプ</p>
+  <h1>Y. KURODA</h1>
 </header>
 
 <section id="data">
@@ -152,7 +151,7 @@
 </section>
 
 <section id="coach-note">
-  <h2>コーチメモ</h2>
+  <h2>メモ</h2>
   <p>・トレーニング1分後の呼吸回復速度をモニタリングできると良い。<br>
      ・息を通したまま加速できているかを動画で確認。<br>
      ・黒田の課題は“リズムと流れ”を取り戻すこと。<br>
@@ -162,6 +161,10 @@
 <div class="btn-back">
   <a href="index.html">← チーム共通ページへ戻る</a>
 </div>
+
+<footer>
+  <p>© 2025 adjustment-lab | Design & Concept by H. Nishimoto</p>
+</footer>
 
 </body>
 </html>
