--- a/m.html
+++ b/m.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Y.MIYAKE｜Multi型｜adjustment-lab</title>
+<title>Y.MIYAKE</title>
 <style>
   body{background:#0d1117;color:#e5e7eb;font-family:'Noto Sans JP',sans-serif;margin:0;padding:40px 20px 80px;line-height:1.8;}
   header{text-align:center;border-bottom:1px solid #1f2937;margin-bottom:30px;padding-bottom:15px;}
@@ -22,8 +22,7 @@
 <body>
 
 <header>
-  <h1>Y. MIYAKE｜Multi型</h1>
-  <p>バランス型・切替強化タイプ</p>
+  <h1>Y. MIYAKE</h1>
 </header>
 
 <section id="data">
@@ -105,7 +104,7 @@
 </section>
 
 <section id="coach-note">
-  <h2>コーチメモ</h2>
+  <h2>メモ</h2>
   <p>・スプリントとMBスローで“切り替え速度”を最優先指標に。<br>
      ・出力開始の遅れをチェック。<br>
      ・三宅の強みはフィジカルの安定。そこに“鋭さ”を足せば完成。<br>
@@ -116,5 +115,9 @@
   <a href="index.html">← チーム共通ページへ戻る</a>
 </div>
 
+<footer>
+  <p>© 2025 adjustment-lab | Design & Concept by H. Nishimoto</p>
+</footer>
+  
 </body>
 </html>
