--- a/t.html
+++ b/t.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Y.TATSUMURA｜Torque型｜adjustment-lab</title>
+<title>Y.TATSUMURA</title>
 <style>
   body {
     background:#0d1117;
@@ -29,8 +29,7 @@
 <body>
 
 <header>
-  <h1>Y. TATSUMURA｜Torque型</h1>
-  <p>回旋連動不足タイプ</p>
+  <h1>Y. TATSUMUR</h1>
 </header>
 
 <section id="data">
@@ -96,7 +95,7 @@
 </section>
 
 <section id="coach-note">
-  <h2>コーチメモ</h2>
+  <h2>メモ</h2>
   <p>・スロー動作で「骨盤先行→胸遅れ」の時間差を徹底観察。<br>
      ・骨盤角度と胸郭角度の差を確認。<br>
      ・辰村はトルク生成の“遅れ”を覚えれば覚醒する。<br>
@@ -106,6 +105,10 @@
 <div class="btn-back">
   <a href="index.html">← チーム共通ページへ戻る</a>
 </div>
+
+ <footer>
+  <p>© 2025 adjustment-lab | Design & Concept by H. Nishimoto</p>
+</footer>
 
 </body>
 </html>
